# d4c-infra-distribution

./: .gitignore  README.md
data/: ca-ab_edmonton-2023A00054811061_orthoimagery_2023_075mm.pmtiles.torrent  ca-bc_vancouver-2022A00055915022_orthoimagery_2022_075mm.pmtiles.torrent  ca_statcan_2021A000011124_d4c-datapkg-statistical_dissemination_areas_cartographic_2021_v0.1.0-beta.parquet.torrent
scripts/01_automate_creation_torrent_basic_tuning/: pyproject.toml  run.sh
scripts/02_libtorrent_experiments/: 01_generate_torrent.py  02_generate_torrent_magnet.py  03_generate_torrent_large_number_files.py  generate_torrent.py
scripts/05_cloudflare_http_ingestor/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  wrangler.toml
scripts/05_cloudflare_http_ingestor/src/: index.js
scripts/06_call_http_ingestor/: .gitignore  README.md  pyproject.toml
scripts/06_call_http_ingestor/src/d4c_http_ingestor/: __init__.py  cli.py  db.py  parquet.py  worker.py
