[project]
name = "d4c-http-ingestor"
version = "0.1.0"
description = "CLI caller for the Cloudflare HTTP ingestor worker – orchestrates concurrent downloads, persists results to SQLite, and exports Parquet."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyarrow>=15",
    "rich>=13",
]

[project.scripts]
d4c-http-ingestor = "d4c_http_ingestor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/d4c_http_ingestor"]
